tests/miniJava/neg/000533_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { extends System.out.println ( { } ) ; } }
